static/imagelib.css
/*
 * CSS for RFO Image Library
 */

html, body {
    margin: 0;
    padding: 0;
    background-color: #B3B3FF;
}

.right {
	float: right;
}

.left {
	float: left;
}

.dropdown {
    background-color: #D3D3FF;
}

.container {
    margin: 0;
    padding: 0;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: #B3B3FF;
}

div.page_title_bar, div.page_footer_bar {
    height: 32px;
    line-height: 18px;
    border: 0px;
    padding-top: 8px;
    padding-left: 8px;
    padding-right: 8px;
    background-color: #B3B3FF;
    text-align: left;
    color: #0B00FF;
    font-size: 18px;
}

.page_title_left {
    float: left;
    padding-left: 2px;
    padding-right: 8px;
}

.page_title_title {
    color: #4287f5;
    font-size: 24px;
}

.homebuttons {
    float: right;
    padding-left: 22px;
    padding-right: 8px;
}

.filters {
    float: right;
    background-color: #9393FF;
    padding-left: 8px;
    padding-right: 8px;
}

.message {
    float: right;
    padding-top: 8px;
    padding-bottom: 4px;
    color: brown;
}

/*
 * Collections
 */

.collection {
    display: inline-block;
    margin: 0;
    padding: 0;
    width: 100%;
    background-color: #4287f5;
	padding-bottom: 10px;
	border-width: 5px;
	border-left-width: 8px;
	border-right-width: 8px;
	border-bottom-width: 5px;
	border-style: solid;
    border-color: #B3B3FF;
}

div.collection_title {
    height: 18px;
    line-height: 18px;
    border: 0px;
    padding: 3px;
    padding-right: 15px;
    text-align: left;
    color: #243a63;
    font-size: 18px;
}

.help-html {
    text-align: left;
    color: #d9c129;
}

.collection_title_title {
    color: #d9c129;
    font-size: 24px;
}

.button {
	text-decoration: underline;
	cursor: pointer;
}

/*
 * Thumbnail Stuff
 */

div.thumb {
    float: left;
	margin-top: 10px;
	margin-left: 10px;
	border-width: 5px;
	border-style: solid;
	border-color: gray;
	padding: 2px;
}

div.thumbpic {
	width: 128px;
	height: 128px;
    text-align: center;
    color: black;
    font-size: 13px;
	cursor: zoom-in;
}

div.thumbtag {
	margin-top: 5px;
    text-align: center;
    color: #243a63;
    font-size: 16px;
	cursor: pointer;
}

img.thumbimg {
	max-width: 128px;
}




div.tag_centered {
    position: fixed;
    width: 120px;
    height: 28px;
    text-align: center;
    color: black;
    font-size: 13px;
}



/* The preview modal */
/* cobbled from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_preview */
.preview-container {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

.preview-deets {
  color: #d9c129;
  position: absolute;
  text-align: left;
  top: 38px;
  left: 16px;
}

.preview-window {
  position: relative;
  left: 5%;
  top: 5%;
  width: 90%;
  height: 80%;  /* In most cases leaves room for header & footer */
}

.preview-header {
  background-color: #B3B3FF;
  color: purple;
  margin: auto;
  padding: 2px;
  height: 24px;
  line-height: 24px;
  border: 5px solid #B3B3FF;  /* so it matches preview-content */
  width: 100%;
}

.preview-content {
  background-color: #545353;
  margin: auto;
  padding: 2px;
  border: 5px solid #545353;
  width: 100%;
  height: 100%;
  text-align: center;
  overflow-y: auto;
}

.preview-img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

/* The Close Button */
.close {
  color: #888888;
  float: right;
  font-size: 24px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

